objects/redwing__Training_Plan_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement</label>
        <referenceTo>redwing__Achievement__c</referenceTo>
        <relationshipLabel>Learning Plan Achievements</relationshipLabel>
        <relationshipName>Training_Plan_Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Main_Achievement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Achievement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan Section</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only sections from the parent Learning Plan can be selected</errorMessage>
            <filterItems>
                <field>redwing__Training_Plan_Section__c.redwing__Training_Plan__c</field>
                <operation>equals</operation>
                <valueField>$Source.redwing__Training_Plan__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Training_Plan_Section__c</referenceTo>
        <relationshipLabel>Learning Plan Achievements</relationshipLabel>
        <relationshipName>Training_Plan_Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plan Achievements</relationshipLabel>
        <relationshipName>Training_Plan_Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Learning Plan Achievement</label>
    <nameField>
        <displayFormat>LPA-{0000000}</displayFormat>
        <label>Learning Plan Achievement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>redwing__Achievement_Required</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNULL(redwing__Achievement__c ) || ISBLANK(redwing__Achievement__c ))</errorConditionFormula>
        <errorDisplayField>redwing__Achievement__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>